Finishing touches to home page spruce-up

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,20 +26,20 @@ const description = 'A description for my home page'
 	<Grid>
 		<FeatureCard heading="A Blog" linkObj={{ label: 'Read blog', href: '/blog' }} icon="quill">
 			<div class="space-y-3">
-				<p>I've been using this space to share and reflect on my own&nbsp;experience.</p>
+				<p>I've been using this space to share and reflect on my own&nbsp;experiences.</p>
 				<p>
-					My latest series is about
-					<a href="/blog/series/today I learned..." class="underline"
-						>what I've been learning about the&nbsp;web</a
-					>.
+					In my latest series,
+					<a href="/blog/series/today I learned..." class="underline">'Today I learned...',</a> I've
+					started journalling about web&nbsp;development.
 				</p>
 				<p>
-					I have also been writing about my experiences of Christianity, for example:
-					<a href="/blog/series/reading the bible" class="underline">Reading&nbsp;The&nbsp;Bible</a>
+					I've also been writing about my experiences of Christianity, for example:
+					<a href="/blog/series/reading the bible" class="underline">Reading&nbsp;The&nbsp;Bible.</a
+					>
 				</p>
 				<p>
-					The posts are organised into series, and each series is intended to be read in order as
-					a&nbsp;series.
+					The posts are organised into series, and generally each series is intended to be read
+					in&nbsp;order.
 				</p>
 			</div>
 		</FeatureCard>
@@ -51,19 +51,17 @@ const description = 'A description for my home page'
 		>
 			<div class="space-y-3">
 				<p>
-					I've been learning web development for fun since early 2022. This site is an opportunity
+					I've been learning web development for fun since late 2021. This site is an opportunity
 					for me to play around and try some&nbsp;things.
 				</p>
 				<p>
-					For example, I've been learning various technologies including React and SQL by making a <a
-						href="/projects"
-						class="underline">board&nbsp;games&nbsp;app</a
-					>.
+					For example, I've been learning various technologies including React and SQL by making a
+					<a href="/projects" class="underline">board&nbsp;games&nbsp;app</a>.
 				</p>
 				<p>
 					Also, check out <a href="https://livinggracedianella.org.au" class="underline"
-						>Living Grace Dianella's new website</a
-					>! It was built by me and some friends using Astro and&nbsp;Strapi.
+						>Living Grace Dianella's new website!</a
+					> It was built by me and some friends using Astro and&nbsp;Strapi.
 				</p>
 			</div>
 		</FeatureCard>
