New post for Today I learned series

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -129,4 +129,8 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 		padding: 2px;
 		font-size: 1rem;
 	}
+	:global(div.blog img) {
+		border: solid 2px var(--dark-red);
+		border-radius: var(--border-radius);
+	}
 </style>
