--- a/src/components/User.astro
+++ b/src/components/User.astro
@@ -5,16 +5,10 @@ import { fetchColours, fetchPlayerColours, capitalise } from './utils'
 const email = Astro?.locals?.email ?? ''
 const colours = await fetchColours() ?? []
 const [playerColours] = Astro?.locals?.colours ?? [{player_1_colour: null, player_2_colour: null}]
-let p1c = "red";
-let p2c = "green";
-colours.forEach(colour => {
-	if (colour.id==playerColours?.player_1_colour) {
-		p1c = colour.name
-	}
-	if (colour.id==playerColours?.player_2_colour) {
-		p2c = colour.name
-	}
-})
+let p1c = playerColours?.player_1_colour?.colour_name?.name ?? "red";
+let p2c = playerColours?.player_2_colour?.colour_name?.name ?? "green";
+let p1_id = playerColours?.player_1_id ?? null
+let p2_id = playerColours?.player_2_id ?? null
 ---
 
 <!--User Menu Button-->{
@@ -63,12 +57,13 @@ colours.forEach(colour => {
 	<form class="space-y-4 flex flex-col" action="/api/player-colours" method="post">
 		{["1", "2"].map((player) => {
 			let playerColour = (player == "1") ? p1c : p2c
+			let playerId = (player == "1") ? p1_id : p2_id
 		return (<label for={`player-${player}-colours`}>Player {player}</label>
 		<select name={`player-${player}-colours`} id={`player-${player}-colours`}>
 			{
 				colours.map((colour) => {
 					let selected = colour.name == playerColour ? "selected" : false
-					return <option value={`{"name":"${colour.name}", "id":"${colour.id}"}`} {selected}>{capitalise(colour.name)}</option>
+					return <option value={`{"player_id":"${playerId}", "name":"${colour.name}", "id":"${colour.id}"}`} {selected}>{capitalise(colour.name)}</option>
 				})
 			}
 		</select>
