--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -143,4 +143,10 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 		border: solid 2px var(--dark-red);
 		border-radius: var(--border-radius);
 	}
+	:global(div.blog hr) {
+		background-color: var(--seriesColourVar);
+		height: 3px;
+		border: none;
+		margin: 1.2rem 0;
+	}
 </style>
