--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,9 @@
 ---
 import User from './User.astro'
+import User2 from './User.jsx'
+import { fetchColours } from './utils'
+const email = Astro?.locals?.email ?? ''
+const colours = (await fetchColours()) ?? []
 ---
 
 <style>
@@ -85,6 +89,7 @@ import User from './User.astro'
 	</div>
 	<div class="absolute right-0 top-0 flex h-full items-center pr-4 md:hidden lg:relative lg:pl-2">
 		<User />
+		<User2 email={email} colours={colours} client:load />
 	</div>
 </header>
 <div
