Fixed the hydration problem. The Supabase client library was getting including on the client side and was blocking React because it couldn't access the environment variables it was getting passed on the servside.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,8 @@
 ---
-import User from './User.astro'
-import User2 from './User.jsx'
-import { fetchColours } from './utils'
+import User from './User.jsx'
 const email = Astro?.locals?.email ?? ''
 console.log('Header email', email)
-const colours = (await fetchColours()) ?? []
+const colours = Astro?.locals?.colours ?? []
 ---
 
 <style>
@@ -90,7 +88,7 @@ const colours = (await fetchColours()) ?? []
 	</div>
 	<div class="absolute right-0 top-0 flex h-full items-center pr-4 md:hidden lg:relative lg:pl-2">
 		{/*<User />*/}
-		<User2 email={email} colours={colours} client:load />
+		<User email={email} colours={colours} client:load />
 	</div>
 </header>
 <div
