--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,7 +60,7 @@ const colours = Astro?.locals?.colours ?? []
 		</nav>
 		<div class="flex items-center md:ml-auto">
 			<div class="mr-2 hidden h-full items-center md:flex">
-				{/*<User />*/}
+				<User email={email} colours={colours} client:load />
 			</div>
 			<!--mobile nav toggle-->
 			<button
@@ -87,7 +87,6 @@ const colours = Astro?.locals?.colours ?? []
 		</div>
 	</div>
 	<div class="absolute right-0 top-0 flex h-full items-center pr-4 md:hidden lg:relative lg:pl-2">
-		{/*<User />*/}
 		<User email={email} colours={colours} client:load />
 	</div>
 </header>
