--- a/src/pages/projects/games/tictactoe.astro
+++ b/src/pages/projects/games/tictactoe.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../../../layouts/BaseLayout.astro'
+import Layout from '../../../layouts/GamesLayout.astro'
 import TicTacToe from '../../../components/games/TicTacToe'
 const title = 'TicTacToe'
 const description = 'The classic game of noughts and crosses, made with React'
