--- a/src/pages/projects/games/index.astro
+++ b/src/pages/projects/games/index.astro
@@ -42,13 +42,15 @@ const { email } = Astro.locals
 			difficulty="easy"
 			colour="green"
 		/>
-		<GameCard
+		{
+			/*<GameCard
 			name="Checkers (under construction)"
 			slug="checkers"
 			description="An oldy but a goody. Made with React."
 			players="2"
 			difficulty="medium"
 			colour="blue"
-		/>
+		/>*/
+		}
 	</div>
 </Layout>
