--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import User from './User.jsx'
+import UserMenu from './UserMenu.jsx'
 const email = Astro?.locals?.email ?? ''
 console.log('Header email', email)
 const colours = Astro?.locals?.colours ?? []
@@ -60,7 +60,7 @@ const colours = Astro?.locals?.colours ?? []
 		</nav>
 		<div class="flex items-center md:ml-auto">
 			<div class="mr-2 hidden h-full items-center md:flex">
-				<User email={email} colours={colours} client:load />
+				<UserMenu email={email} colours={colours} client:load />
 			</div>
 			<!--mobile nav toggle-->
 			<button
@@ -87,7 +87,7 @@ const colours = Astro?.locals?.colours ?? []
 		</div>
 	</div>
 	<div class="absolute right-0 top-0 flex h-full items-center pr-4 md:hidden lg:relative lg:pl-2">
-		<User email={email} colours={colours} client:load />
+		<UserMenu email={email} colours={colours} client:load />
 	</div>
 </header>
 <div
@@ -120,7 +120,7 @@ const colours = Astro?.locals?.colours ?? []
 	headerObserver.observe(headerTrigger)
 </script>
 <script>
-	import { activeMenus as $activeMenus } from '../stores/activeMenus'
+	import { $activeMenus } from '../stores/activeMenus'
 	//Note that this can be collapsed by User.jsx - they share the activeMenus state.
 	const headerNavToggle = document.querySelector('.headerNavToggle')
 	const headerNav = document.querySelector('.headerNav')
