--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Grid from '../components/Grid.astro'
 import { Icon } from 'astro-icon/components'
 import FeatureCard from '../components/FeatureCard.astro'
 const title = 'Welcome!'
-const description = 'A description for my home page'
+const description = "Rohan Nelson's home page and blog."
 ---
 
 <Layout title={title} description={description}>
