Begun editing of study on spiritual leadership (included adding styling for superscript and h5)

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -149,4 +149,9 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 		border: none;
 		margin: 1.2rem 0;
 	}
+	:global(div.blog sup) {
+		font-size: 75%;
+		font-weight: 500;
+		padding-right: 0.05rem;
+	}
 </style>
