--- a/src/pages/projects/games/index.astro
+++ b/src/pages/projects/games/index.astro
@@ -29,15 +29,14 @@ const description = 'Learning by doing.'
 			difficulty="easy"
 			colour="green"
 		/>
-		{
-			/*<GameCard
+		<GameCard
 			name="Checkers (under construction)"
 			slug="checkers"
+			icon="checkers"
 			description="An oldy but a goody. Made with React."
 			players="2"
 			difficulty="medium"
 			colour="blue"
-		/>*/
-		}
+		/>
 	</div>
 </Layout>
