--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -4,6 +4,7 @@ import NavCard from '../components/NavCard.astro'
 import Metadata from '../components/Metadata.astro'
 import SeriesCard from '../components/SeriesCard.astro'
 import Grid from '../components/Grid.astro'
+import MailingList from '../components/Subscribe.astro'
 import { Icon } from 'astro-icon/components'
 const { frontmatter } = Astro.props
 const allBlogs = await Astro.glob('../pages/blog/*.mdx')
@@ -77,6 +78,7 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 				}
 			</div>
 		</Grid>
+		<MailingList />
 	</div>
 </Layout>
 <style define:vars={{ seriesColourVar }}>
