--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -17,7 +17,7 @@ if (accessToken && refreshToken) {
 	<p>New here? <a href="/create-account">Create an account</a></p>
 	<form class="space-y-4" action="/api/auth/sign-in" method="post">
 		<div>
-			<label for="email" for="email">Email</label>
+			<label for="email">Email</label>
 			<input
 				type="email"
 				name="email"
