--- a/src/pages/subscribe.astro
+++ b/src/pages/subscribe.astro
@@ -5,13 +5,19 @@ import Button from '../components/Button.astro'
 
 <BaseLayout title="Subscribe" description="Keep up to date with the latest from rohannelson.com">
 	<div class="flex">
-		<form action="/api/subscribe" method="post" class="mx-auto flex flex-col space-y-2">
+		<form
+			action="/api/subscribe"
+			method="post"
+			id="subscribe"
+			class="mx-auto flex flex-col space-y-2"
+		>
 			<div class="flex space-x-4">
 				<label class="flex flex-col text-lg font-medium text-dark-grey">
 					First Name
 					<input
 						type="text"
 						name="firstName"
+						id="firstName"
 						required
 						oninvalid="this.setCustomValidity('Please enter your first name')"
 						oninput="setCustomValidity('')"
@@ -23,6 +29,7 @@ import Button from '../components/Button.astro'
 					<input
 						type="text"
 						name="lastName"
+						id="lastName"
 						class="w-fit rounded border border-solid border-light-grey px-2 py-1.5 text-base"
 					/>
 				</label>
@@ -32,6 +39,7 @@ import Button from '../components/Button.astro'
 				<input
 					type="email"
 					name="email"
+					id="email"
 					required
 					oninvalid="this.setCustomValidity('Please enter valid email')"
 					oninput="setCustomValidity('')"
@@ -44,3 +52,28 @@ import Button from '../components/Button.astro'
 		</form>
 	</div>
 </BaseLayout>
+<script>
+	const form = document.querySelector('#subscribe')
+	const firstName = document.querySelector('#firstName')
+	const lastName = document.querySelector('#lastName')
+	const email = document.querySelector('#email')
+	form.addEventListener('submit', (e) => {
+		e.preventDefault()
+		console.log(firstName.value, lastName.value, email.value)
+		const method = e.target.method
+		const formData = new FormData()
+		formData.append('firstName', firstName.value)
+		formData.append('lastName', lastName.value)
+		formData.append('email', email.value)
+		console.log('formData', formData)
+		async function submitSubscription() {
+			const response = await fetch('/api/subscribe', {
+				method: method,
+				body: formData
+			})
+			const data = await JSON.stringify(response)
+			console.log('data', data)
+		}
+		submitSubscription()
+	})
+</script>
