--- a/src/pages/subscription-confirmation.astro
+++ b/src/pages/subscription-confirmation.astro
@@ -10,7 +10,7 @@ import Confetti from '../components/Confetti.jsx'
 	<p class="hyphens-none text-lg">
 		And hey, you've given me yours, so if you want to contact me, my email is <a
 			href="mailto:hello@rohannelson.com"
-			class="underline">hello@rohannelson.com</a
+			class="text-lg underline">hello@rohannelson.com</a
 		>
 		 🙂
 	</p>
