--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -1,6 +1,6 @@
 ---
 //For use in cards (particularly FeatureCard)
-const { href, label, buttonStyle = 'white' } = Astro.props
+const { href, label, buttonStyle = 'white', target = '' } = Astro.props
 let classes
 if (buttonStyle == 'white') {
 	classes =
@@ -15,6 +15,7 @@ if (buttonStyle == 'white') {
 
 <a
 	href={href}
+	target={target}
 	class={`mt-auto self-start rounded-[--border-radius] border-[2px] border-solid border-white px-[10px] py-[3px] text-center text-[length:--font-size-h4] font-bold leading-[--line-height-h4] no-underline min-w-24 ${classes}`}
 	>{label}</a
 >
