New post - Against Eunomius. Also removed auto hyphenation.

--- a/src/pages/subscription-confirmation.astro
+++ b/src/pages/subscription-confirmation.astro
@@ -7,12 +7,12 @@ import Confetti from '../components/Confetti.jsx'
 
 <Layout title={title} description={description}>
 	<h2>It worked! Thanks for confirming your email.</h2>
-	<p class="hyphens-none text-lg">
+	<p class="text-lg">
 		And hey, you've given me yours, so if you want to contact me, my email is <a
 			href="mailto:hello@rohannelson.com"
 			class="text-lg underline">hello@rohannelson.com</a
 		>
-		 🙂
+		🙂
 	</p>
 	<Confetti client:only />
 </Layout>
