Fixed formatting of references on latest article, plus added some soft-hyphens to key pages.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const description = "Rohan Nelson's home page and blog."
 ---
 
 <Layout title={title} description={description}>
-	<div class="wrapper flex pl-[10px] md:-mx-3">
+	<div class="wrapper flex text-balance pl-[10px] md:-mx-3">
 		<p
 			class="focus m-0 self-center hyphens-auto pr-[25px] text-[calc(40rem/16)] leading-[calc(50rem/16)] sm:pr-0 sm:text-[calc(24rem/16)] sm:leading-[calc(34rem/16)] md:text-[calc(32rem/16)] md:leading-[calc(40rem/16)]"
 		>
@@ -28,17 +28,17 @@ const description = "Rohan Nelson's home page and blog."
 			<div class="space-y-3">
 				<p>I've been using this space to share and reflect on my own&nbsp;experiences.</p>
 				<p>
-					In my latest series,
+					In a recent series,
 					<a href="/blog/series/today I learned..." class="underline">'Today I learned...',</a> I've
-					started journalling about web&nbsp;development.
+					started journ&shy;alling about web development.
 				</p>
 				<p>
-					I've also been writing about my experiences of Christianity, for example:
+					I've also been writing about my exper&shy;iences of Christi&shy;anity, for example:
 					<a href="/blog/series/reading the bible" class="underline">Reading&nbsp;The&nbsp;Bible.</a
 					>
 				</p>
 				<p>
-					The posts are organised into series, and generally each series is intended to be read
+					The posts are org&shy;anised into series, and generally each series is intended to be read
 					in&nbsp;order.
 				</p>
 			</div>
@@ -51,11 +51,12 @@ const description = "Rohan Nelson's home page and blog."
 		>
 			<div class="space-y-3">
 				<p>
-					I've been learning web development for fun since late 2021. This site is an opportunity
-					for me to play around and try some&nbsp;things.
+					I've been learning web devel&shy;opment for fun since late 2021. This site is an
+					oppor&shy;tunity for me to play around and try some&nbsp;things.
 				</p>
 				<p>
-					For example, I've been learning various technologies including React and SQL by making a
+					For example, I've been learning various technol&shy;ogies including React and SQL by
+					making a
 					<a href="/projects" class="underline">board&nbsp;games&nbsp;app</a>.
 				</p>
 				<p>
