New blog post! My research proposal (plus made nested ordered list latin characters).

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -117,6 +117,10 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {
 	:global(ol) {
 		padding-left: 1rem;
 	}
+	:global(div.blog ol ol li) {
+		list-style-type: lower-alpha;
+	}
+
 	:global(blockquote) {
 		margin-left: 0;
 		padding-left: 40px;
