--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,6 +30,10 @@ const pageDescription = description ?? frontmatter.description
 		/>
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content={pageDescription} />
+		<script
+			defer
+			src="https://cloud.umami.is/script.js"
+			data-website-id="b166f848-ec31-4579-b581-c1892cdb6a95"></script>
 		<title>{pageTitle} - rohannelson.com</title>
 	</head>
 	<body>
