--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,6 +40,7 @@ const pageDescription = description ?? frontmatter.description
 				/>
 			)
 		}
+		<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 		<title>{pageTitle} - rohannelson.com</title>
 	</head>
 	<body>
